# torchless-xor-mnist

./: .gitignore  Makefile  README.md  flake.nix  idx_format.md
cpp/: .clang-format  .gitignore  CMakeLists.txt  run_tests.sh  todos.md
cpp/examples/: mnist.cpp  xor.cpp
cpp/include/torchless/: data.h  nn.h  shape.h  tensor.h  utils.h
cpp/include/torchless/tensor/: tensor_base.h  tensor_cpu.h  tensor_gpu.h
cpp/src/: data.cpp  losses.h  mnist.cpp  nn.h  tensor.cpp  tests.cpp  xor.cpp
cpp/src/nn/: losses.cpp  modules.cpp
cpp/src/tensor/: tensor.cpp
cpp/src/tensor/base/: tensor_factories.cpp
cpp/src/tensor/cpu/: tensor_factories.cpp  tensor_index.cpp  tensor_io.cu  tensor_linalg.cpp  tensor_ops.cpp  tensor_reduction.cpp  tensor_shape.cpp
cpp/src/tensor/gpu/: tensor_factories.cu  tensor_index.cu  tensor_io.cu  tensor_ops.cu
docs/: main.py
implementation/: Makefile  dataloaders.h  losses.h  main  main.cpp  mnist  mnist.cpp  nn.h  tensor.cpp  tensor.h  xor  xor.cpp
prototyope/: README.md  main.py  pyproject.toml
prototype/: .gitignore
prototype/src/: constants.py  dataloaders.py  losses.py  mnist.py  mnist_capacity.py  modules.py  xor.py
python/: .gitignore  pyrightconfig.json
python/src/: constants.py  dataloaders.py  mnist.py  modules.py  visualize_activation_functions.py
src/: Makefile  dataloaders.h  losses.h  main  main.cpp  mnist.cpp  nn.h  tensor.cpp  tensor.h  tests  tests.cpp  utils.h  xor  xor.cpp
visualizations/: sigmoid_function.py
